--- a/ProjectProposalGroup035-Wi22.ipynb
+++ b/ProjectProposalGroup035-Wi22.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Is there a relationship between stimulus checks/grants/unemployment bonuses and covid infection rates across the counties of California between March 2020 to September 2020?*"
+    "*Is there a relationship between stimulus checks and covid infection rates across the counties of California between March 2020 to February 2021?*"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Upon our research, we hypothesized that there is a negative correlation between the stimulus checks/covid grants and covid infections rates across the counties of California. We believe this is the case because people will be able to support some of their bare necessities while staying isolated which will keep others safe and prevent exposure.*"
+    "*Upon our research, we hypothesized that there is a negative correlation between the stimulus checks and covid infections rates across the counties of California. We believe this is the case because people will be able to support some of their bare necessities while staying isolated which will keep others safe and prevent exposure.*"
    ]
   },
   {
@@ -87,13 +87,10 @@
     "    - *Covid rates per county:*\n",
     "        - https://usafacts.org/visualizations/coronavirus-covid-19-spread-map (county populations and daily cases by county)\n",
     "    - *Amount of stimulus money:*\n",
-    "    - *Amount of unemployment benefits per county:*\n",
     "    - *Minimum wage per county:*\n",
     "        - https://minimumwage.com/state/california/ (Wages of counties)\n",
     "    - *Cost of living per county:*\n",
-    "        - In search of a data set, but this seems promising https://www.bls.gov/cpi/data.htm  \n",
-    "    - Food prices per county\n",
-    "        - In search of a data set"
+    "        - In search of a data set, but this seems promising https://www.bls.gov/cpi/data.htm  "
    ]
   },
   {
@@ -107,19 +104,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. *Are there any biases/privacy/terms of use issues with the data you proposed?*\n",
+    "1. Are there any biases/privacy/terms of use issues with the data you proposed?\n",
     "    - There is a subset of the population who will not show up to the hospital or take a covid test so there is a set of people whose covid data isn’t available.\n",
-    "    \n",
-    "2. *Are there potential biases in your dataset(s), in terms of who it composes, and how it was collected, that may be problematic in terms of it allowing for equitable analysis? (For example, does your data exclude particular populations, or is it likely to reflect particular human biases in a way that could be a problem?)*\n",
+    "2. Are there potential biases in your dataset(s), in terms of who it composes, and how it was collected, that may be problematic in terms of it allowing for equitable analysis? (For example, does your data exclude particular populations, or is it likely to reflect particular human biases in a way that could be a problem?)\n",
     "    - Our sample size leaves room for a lot of confounds including class, cultural, and geographical differences. While covid infections are unbiased, healthcare access, necessity for work and government/science (People) (Science/Government Distrust creates anti-science culture: Polio vaccine, fake studies on the biological difference of black people) are all variables that are difficult to account for. Because of this, we will most likely fail to come up with solutions on how to reduce covid rates in these communities despite not being deserving of higher covid rates.\n",
-    "    \n",
-    "3. *How will you set out to detect these specific biases before, during, and after/when communicating your analysis?*\n",
+    "3. How will you set out to detect these specific biases before, during, and after/when communicating your analysis?\n",
     "    - Reducing area to reduce cultural/political differences such that we can accurately assess the left over variables (We assume the leftovers will mainly be geographical variables). \n",
-    "    \n",
-    "4. *Are there any other issues related to your topic area, data, and/or analyses that are potentially problematic in terms of data privacy and equitable impact?*\n",
+    "4. Are there any other issues related to your topic area, data, and/or analyses that are potentially problematic in terms of data privacy and equitable impact?\n",
     "    - Participants might not agree with how the original data was collected (Via government resources). They might extend their distrust with the government/historical science onto us making it harder to apply our results (Assuming they’re meaningful).\n",
-    "    \n",
-    "5. *How will you handle issues you identified?*\n",
+    "5. How will you handle issues you identified?\n",
     "    - Still unsure.\n"
    ]
   },
