--- a/DataCheckpointGroup035-Wi22.ipynb
+++ b/DataCheckpointGroup035-Wi22.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "source": [
     "- Dataset Name: Statewide COVID-19 Cases Deaths Tests\n",
-    "- Link to the dataset: https://data.chhs.ca.gov/dataset/f333528b-4d38-4814-bebb-12db1f10f535/resource/046cdd2b-31e5-4d34-9ed3-b48cdbc4be7a/download/covid19cases_test.csv\n",
+    "- Link to the dataset: https://data.chhs.ca.gov/dataset/covid-19-time-series-metrics-by-county-and-state/resource/046cdd2b-31e5-4d34-9ed3-b48cdbc4be7a\n",
     "- Number of observations: 45201\n",
     "\n",
     "This dataset includes the number of daily COVID-19 cases, deaths, and tests for each county in California from 2/1/2020 to now as well as the population size of each county."
