added stimulus data

--- a/EDACheckpointGroup035-Wi22.ipynb
+++ b/EDACheckpointGroup035-Wi22.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,23 +66,233 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Describe your data cleaning steps here."
+    "### Data Set 1: Covid Rates by County\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We first checked the unique values in the area column to find that it also included California, out of state, and unknown, so we removed those columns. Then we added a new column for the positivity rate by calculating it from the number of positive tests and the number of total tests. We only need the daily rates by county, so we selected the columns 'date', 'area', and 'rate' and renamed 'area' to 'county'. Lastly, we filtered the data to only include data from March 2020 to February 2021. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>county</th>\n",
+       "      <th>rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2020-03-03</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2020-03-04</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>4.545455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2020-03-05</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date   county      rate\n",
+       "29  2020-03-01  Alameda  0.000000\n",
+       "30  2020-03-02  Alameda  0.000000\n",
+       "31  2020-03-03  Alameda  0.000000\n",
+       "32  2020-03-04  Alameda  4.545455\n",
+       "33  2020-03-05  Alameda  0.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## YOUR CODE HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION\n",
     "covid_df = pd.read_csv('https://data.chhs.ca.gov/dataset/f333528b-4d38-4814-bebb-12db1f10f535/resource/046cdd2b-31e5-4d34-9ed3-b48cdbc4be7a/download/covid19cases_test.csv')\n",
     "covid_df = covid_df[~covid_df.area.isin(['California', 'Out of state', 'Unknown'])]\n",
     "covid_df = covid_df.assign(rate = covid_df['positive_tests'] / covid_df['total_tests'] * 100)\n",
     "covid_df = covid_df[['date', 'area', 'rate']]\n",
     "covid_df = covid_df.rename({'area':'county'}, axis='columns')\n",
-    "covid_df = covid_df.loc[(covid_df['date'] >= '2020-03-01') & (covid_df['date'] <= '2021-02-27')]"
+    "covid_df = covid_df.loc[(covid_df['date'] >= '2020-03-01') & (covid_df['date'] <= '2021-02-27')]\n",
+    "covid_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Set 2: Stimulus Check Amounts\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to create the data for the stimulus check, we were able to find all the data needed online [Stimulus Check 1 Source](https://www.irs.gov/pub/irs-utl/e-poster_payments.pdf) and [Stimulus Check 2 Source](https://www.irs.gov/newsroom/treasury-and-irs-begin-delivering-second-round-of-economic-impact-payments-to-millions-of-americans). We created a data frame that has two rows for the two stimulus checks we will be comparing. \n",
+    "\n",
+    "In the columns, we included the range of the disbursement dates, the base amount, amount given to a married couple, additional amount, and a the amounts that were given to families depending on how many qualified dependents or children they have in the form of tuples (x, y) where x represents a single parent family and y is a married couple family. \n",
+    "\n",
+    "The purpose of this data is for the reader to be able to see what the stimulus checks are, and how much was given to families. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>range of disbursement</th>\n",
+       "      <th>base</th>\n",
+       "      <th>married couple</th>\n",
+       "      <th>amount per additional dependent</th>\n",
+       "      <th>one dependent</th>\n",
+       "      <th>two dependents</th>\n",
+       "      <th>three dependents</th>\n",
+       "      <th>four dependents</th>\n",
+       "      <th>five dependents</th>\n",
+       "      <th>six dependents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Stimulus Check 1</th>\n",
+       "      <td>April 2020 - June 2020</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>2400</td>\n",
+       "      <td>500</td>\n",
+       "      <td>(1700, 2900)</td>\n",
+       "      <td>(2200, 3400)</td>\n",
+       "      <td>(2700, 3900)</td>\n",
+       "      <td>(3200, 4400)</td>\n",
+       "      <td>(3700, 4900)</td>\n",
+       "      <td>(4200, 5400)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Stimulus Check 2</th>\n",
+       "      <td>December 2020 - January 2021</td>\n",
+       "      <td>600</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>600</td>\n",
+       "      <td>(1200, 1800)</td>\n",
+       "      <td>(1800, 2400)</td>\n",
+       "      <td>(2400, 3000)</td>\n",
+       "      <td>(3000, 3600)</td>\n",
+       "      <td>(3600, 4200)</td>\n",
+       "      <td>(4200, 4800)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         range of disbursement  base  married couple  \\\n",
+       "Stimulus Check 1        April 2020 - June 2020  1200            2400   \n",
+       "Stimulus Check 2  December 2020 - January 2021   600            1200   \n",
+       "\n",
+       "                  amount per additional dependent one dependent  \\\n",
+       "Stimulus Check 1                              500  (1700, 2900)   \n",
+       "Stimulus Check 2                              600  (1200, 1800)   \n",
+       "\n",
+       "                 two dependents three dependents four dependents  \\\n",
+       "Stimulus Check 1   (2200, 3400)     (2700, 3900)    (3200, 4400)   \n",
+       "Stimulus Check 2   (1800, 2400)     (2400, 3000)    (3000, 3600)   \n",
+       "\n",
+       "                 five dependents six dependents  \n",
+       "Stimulus Check 1    (3700, 4900)   (4200, 5400)  \n",
+       "Stimulus Check 2    (3600, 4200)   (4200, 4800)  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stimulus_data = {\n",
+    "    'range of disbursement': ['April 2020 - June 2020', 'December 2020 - January 2021'],\n",
+    "    'base': [1200, 600],\n",
+    "    'married couple': [2400, 1200],\n",
+    "    'amount per additional dependent': [500, 600],\n",
+    "    'one dependent': [(1700, 2900), (1200, 1800)],\n",
+    "    'two dependents': [(2200, 3400), (1800, 2400)],\n",
+    "    'three dependents': [(2700, 3900), (2400, 3000)],\n",
+    "    'four dependents': [(3200, 4400), (3000, 3600)],\n",
+    "    'five dependents': [(3700, 4900), (3600, 4200)],\n",
+    "    'six dependents': [(4200, 5400), (4200, 4800)]\n",
+    "}\n",
+    "stimulus_df = pd.DataFrame(stimulus_data, index = ['Stimulus Check 1', 'Stimulus Check 2'])\n",
+    "stimulus_df.head()"
    ]
   },
   {
@@ -90,6 +300,14 @@
    "metadata": {},
    "source": [
     "# Data Analysis & Results (EDA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EDA for the first stimulus check\n",
+    "---"
    ]
   },
   {
@@ -387,6 +605,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -396,7 +619,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
