edited part of conclusion

--- a/FinalProjectGroup035-Wi22.ipynb
+++ b/FinalProjectGroup035-Wi22.ipynb
@@ -1708,8 +1708,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There were a lot of tests and analyses we could not do because we do not have the needed data. \n",
     "- Why we couldn't run other tests \n",
-    "    - We couldn't look at the correlation between stimulus checks and covid positivity rates because there is no data on the amount of stimulus money each person received and the covid positivity rates for people who received different amounts of stimulus money.\n",
+    "    - We couldn't look at the correlation between stimulus checks and covid positivity rates because finding correlation requires two variables (one for stimulus checks and one for covid rates), but we only have covid rates. For our current datasets the only way we can vary the stimulus checks is the different amount of money given for each of the different stimulus checks, but that is only two values (three if we also consider the third stimulus check). However, finding the correlation between the two or three stimulus checks and the covid rates does not really offer much insight because there would only be two or three points on the graph. Another way is to find the correlation between households who received different amounts of stimulus money (due to having different household sizes) and their covid rates. However, there is no such dataset.\n",
     "    - why we couldn't do inferential (idk how to spell...)\n",
     "    - why we couldn't do *insert test* \n",
     "- Confounds\n",
@@ -1719,7 +1720,7 @@
     "    - After the first stimulus check was disbursed, we were put on a lock down for the next 6-8 months, so quarantine likely had an effect on the decrease in covid positivity rates.\n",
     "    - First stim check was the start of the first lock down (mar 19 2020) around the same time as our stim check\n",
     "    - People used their stimulus checks differently: some used on food or family needs that helped them stay at home whereas others might have used it for other things like building new computers that did not influence them to stay at home.\n",
-    "    - Holidays, how many people were ACTUALLY quarantining during the holidays? were people going out a lot during the later part of the lock down? \n",
+    "    - Holidays could also lead to an increase in covid positivity rates as there are more gatherings during holidays such as Thanksgiving, Christmas, and New year's, which occur right before or right when the second stimulus check was given. So even though covid positivity rates were lower after the second stimulus check was given, it could have just been because there were less gatherings after the holiday season and not because stimulus checks caused more people to be able to stay home.\n",
     "    - People got tired of lock down in the later half\n",
     "- Data set issues (couldn't find the right data sets) \n",
     "    - We wanted costs of living on counties \n",
@@ -1729,7 +1730,7 @@
     "    - First idea was to compare amount of stimulus money amongst different groups, but everyone got the same amount of money, so this data set didn't exist. \n",
     "    - Overall, we lacked a lot of resources to run different tests and analysis. Having more variety of data sets would have potentially help with confounding variables, but since we didn't have them, we will never really know how our analysis and results would have looked like. \n",
     "- More on the results (even though our z test implied that there is a relationship -> doesn't mean there is)\n",
-    "    - Even though our results from our z test implied that there is a relationship, this doesn't mean there is because there are a lot of confounding variables specified above. "
+    "    - Even though our results from our z tests showed that there was a significant decrease in covid positivity rates after each of the first two stimulus checks were disbursed, this doesn't mean there is a relationship between stimulus checks and covid positivity rates because there are a lot of confounding variables specified above. "
    ]
   },
   {
