edited part of conclusion

--- a/FinalProjectGroup035-Wi22.ipynb
+++ b/FinalProjectGroup035-Wi22.ipynb
@@ -1708,7 +1708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There were a lot of tests and analyses we could not do because we do not have the needed data. \n",
+    "We started by asking the question of whether there is a relationship between stimulus checks and covid positivity rates in California counties. We aimed to answer this question using a dataset containing the daily covid positivity rate for each county in California from March 2020 to February 2021 and a dataset containing the periods of which the first and second stimulus checks were disbursed. We created line graphs to show the trends of covid positivity rates for each county in California from March 2020 to February 2021. We then used two z-tests, one comparing the mean covid rates one month before and one month after the first stimulus check disbursement period and one comparing the mean covid rates one month before and one month after the second stimulus check disbursement period. We ended up rejecting the null hypothesis for both as the p value is very small (way less than 0.05). Even though our results from our z tests showed that there was a significant decrease in covid positivity rates after each of the first two stimulus checks were disbursed (due to having large negative z scores), this does not mean there is a relationship between stimulus checks and covid positivity rates because there are a lot of confounding variables that we will discuss below. Also, there were a lot of tests and analyses we could not do because we do not have the needed data. \n",
     "- Why we couldn't run other tests \n",
     "    - We couldn't look at the correlation between stimulus checks and covid positivity rates because finding correlation requires two variables (one for stimulus checks and one for covid rates), but we only have covid rates. For our current datasets the only way we can vary the stimulus checks is the different amount of money given for each of the different stimulus checks, but that is only two values (three if we also consider the third stimulus check). However, finding the correlation between the two or three stimulus checks and the covid rates does not really offer much insight because there would only be two or three points on the graph. Another way is to find the correlation between households who received different amounts of stimulus money (due to having different household sizes) and their covid rates. However, there is no such dataset.\n",
     "    - why we couldn't do inferential (idk how to spell...)\n",
@@ -1728,9 +1728,7 @@
     "    - Total amount of money each county got \n",
     "        - potentially could have helped for sampling purposes. Compare other other counties\n",
     "    - First idea was to compare amount of stimulus money amongst different groups, but everyone got the same amount of money, so this data set didn't exist. \n",
-    "    - Overall, we lacked a lot of resources to run different tests and analysis. Having more variety of data sets would have potentially help with confounding variables, but since we didn't have them, we will never really know how our analysis and results would have looked like. \n",
-    "- More on the results (even though our z test implied that there is a relationship -> doesn't mean there is)\n",
-    "    - Even though our results from our z tests showed that there was a significant decrease in covid positivity rates after each of the first two stimulus checks were disbursed, this doesn't mean there is a relationship between stimulus checks and covid positivity rates because there are a lot of confounding variables specified above. "
+    "    - Overall, we lacked a lot of resources to run different tests and analysis. Having more variety of data sets would have potentially help with confounding variables, but since we didn't have them, we will never really know how our analysis and results would have looked like. \n"
    ]
   },
   {
