added video link

--- a/FinalProjectGroup035-Wi22.ipynb
+++ b/FinalProjectGroup035-Wi22.ipynb
@@ -23,6 +23,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Link to video](https://youtu.be/PZmsPWrZHsU)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Overview"
    ]
   },
