removed PIDs for privacy

--- a/FinalProjectGroup035-Wi22.ipynb
+++ b/FinalProjectGroup035-Wi22.ipynb
@@ -46,11 +46,11 @@
    "source": [
     "# Names\n",
     "\n",
-    "- David Em-Yinn A16569812\n",
-    "- Jing Li A15548097\n",
-    "- Anna Hsieh A15949484\n",
-    "- Alejandro Garcia Martinez A15789612\n",
-    "- Christian Gonzalez A16592996"
+    "- David Em-Yinn \n",
+    "- Jing Li \n",
+    "- Anna Hsieh\n",
+    "- Alejandro Garcia Martinez \n",
+    "- Christian Gonzalez"
    ]
   },
   {
